--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,23 @@ header {
     
 }
 
+.sps-notfound-section {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.sps-notfound-section h1 {
+    color: #FF0101;
+    font-size: 36px;
+}
+
+.sps-notfound-section a {
+    color: #000;
+}
+
 @media screen and (max-width: 1450px) {
     .sps-home-content-flex {
         display: block;   
